# cpp_template_windows

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LIBRARIES.md  LICENSE  README.md  test_build.bat  vcpkg.json
.github/workflows/: ci.yml  release.yml
apps/: CMakeLists.txt  main.cpp
cmake/: CppProjectTemplateConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/cpp_project_template/: all.hpp  config.hpp  geometry.hpp  integration.hpp  logger.hpp  robotics.hpp
include/cpp_project_template/geometry/: transforms.hpp  twist.hpp  utilities.hpp  wrench.hpp
libs/core/: CMakeLists.txt
libs/core/include/cpp_project_template/: core.hpp
libs/core/include/cpp_project_template/core/: utilities.hpp
libs/core/src/: utilities.cpp
libs/geometry/: CMakeLists.txt
libs/geometry/include/cpp_project_template/: geometry.hpp
libs/geometry/include/cpp_project_template/geometry/: pose3d.hpp
libs/geometry/src/: pose3d.cpp
libs/robotics/: CMakeLists.txt
libs/robotics/include/cpp_project_template/robotics/: transforms.hpp  twist.hpp  wrench.hpp
libs/robotics/src/: transforms.cpp  twist.cpp  wrench.cpp
scripts/: build_test.bat  format.bat  setup.bat  test_config.bat  verify_build.bat
src/: CMakeLists.txt  integration.cpp  logger.cpp  transforms.cpp  twist.cpp  utilities.cpp  wrench.cpp
tests/: CMakeLists.txt  test_logger_catch2.cpp  test_logger_gtest.cpp  test_main_catch2.cpp
